[gd_scene load_steps=4 format=3 uid="uid://bd3i6lxjgj1h7"]

[ext_resource type="Script" uid="uid://bynslxxp8ll03" path="res://game_hud/hud_winner.gd" id="1_0gl7u"]
[ext_resource type="Theme" uid="uid://cji3sllgxv7xq" path="res://themes/popup_theme.tres" id="1_uplb1"]
[ext_resource type="Texture2D" uid="uid://d2c3r526gym56" path="res://assets/images/defaults/shield.png" id="3_y13hx"]

[node name="HUD_Winner" type="Panel"]
custom_minimum_size = Vector2(1000, 1200)
offset_right = 1000.0
offset_bottom = 1400.0
mouse_filter = 1
theme = ExtResource("1_uplb1")
script = ExtResource("1_0gl7u")

[node name="hud_title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 174.0
grow_horizontal = 2
mouse_filter = 1
theme = ExtResource("1_uplb1")
theme_override_font_sizes/font_size = 100
text = "Final Whistle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinnerOrDraw" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -263.5
offset_top = 305.0
offset_right = 263.5
offset_bottom = 379.0
grow_horizontal = 2
theme = ExtResource("1_uplb1")
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
text = "Winner/ Draw"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 408.0
offset_bottom = 1204.0
grow_horizontal = 2

[node name="Shield1" type="TextureRect" parent="GridContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_y13hx")

[node name="Name1" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uplb1")
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
text = "Team 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score1" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("1_uplb1")
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Shield2" type="TextureRect" parent="GridContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_y13hx")

[node name="Name2" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uplb1")
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
text = "Team 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score2" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("1_uplb1")
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_replay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_uplb1")
theme_override_font_sizes/font_size = 50
text = "play again"
